添加调试日志定位React应用初始化问题
- 在library.html中添加console.log确认HTML加载
- 在useI18n.ts开头添加console.log确认模块加载
- 帮助确定是HTML加载问题还是JavaScript执行问题

--- a/library.html
+++ b/library.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <div id="root"></div>
+  <script>
+    console.log('library.html loaded, initializing React app');
+  </script>
   <script src="library.js"></script>
 </body>
 </html>
