--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="9TsVxudzJBOXwKrgXfYCPplLpeieuvsi6PHY9v8tT-s" />
     <title>iSnips · 片语 - 简洁高效的浏览器信息采集工具</title>
     <style>
         :root {
@@ -10,6 +12,7 @@
             --bg: #F5F5F7;
             --text: #1D1D1F;
         }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             background-color: var(--bg);
@@ -23,27 +26,32 @@
             min-height: 100vh;
             text-align: center;
         }
+
         .container {
             max-width: 600px;
             padding: 40px;
             background: white;
             border-radius: 20px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
         }
+
         img.logo {
             width: 80px;
             height: 80px;
             margin-bottom: 20px;
         }
+
         h1 {
             font-size: 32px;
             margin-bottom: 10px;
         }
+
         p {
             font-size: 18px;
             color: #86868b;
             margin-bottom: 30px;
         }
+
         .btn {
             display: inline-block;
             background: var(--primary);
@@ -54,15 +62,18 @@
             font-weight: 600;
             transition: all 0.2s;
         }
+
         .btn:hover {
             opacity: 0.9;
             transform: scale(1.02);
         }
+
         footer {
             margin-top: 40px;
             font-size: 14px;
             color: #86868b;
         }
+
         footer a {
             color: var(--primary);
             text-decoration: none;
@@ -70,11 +81,13 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>iSnips · 片语</h1>
         <p>一款简洁高效的浏览器信息采集工具，支持 Google Drive 与 WebDAV 云端同步。</p>
-        <a href="https://chromewebstore.google.com/detail/isnips/bjemnabegidmkbkdepanilbcidpbnpmj" class="btn">前往 Chrome 应用商店</a>
+        <a href="https://chromewebstore.google.com/detail/isnips/bjemnabegidmkbkdepanilbcidpbnpmj" class="btn">前往 Chrome
+            应用商店</a>
         <footer>
             <a href="privacy.html">隐私政策 (Privacy Policy)</a>
             <span>|</span>
@@ -82,4 +95,5 @@
         </footer>
     </div>
 </body>
+
 </html>
