fix: correct GitHub repository link in index.html

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <footer>
             <a href="privacy.html">隐私政策 (Privacy Policy)</a>
             <span>|</span>
-            <a href="https://github.com/nicekate/iSnips">GitHub 仓库</a>
+            <a href="https://github.com/istxing/iSnips">GitHub 仓库</a>
         </footer>
     </div>
 </body>
